# object_pose_tracking

./: .gitmodules  README.md  pyproject.toml  requirements.txt  requirements_full.txt
inference_ros/: allegro_constants.py  cam_global_extrinsic_tf.yaml  inference_ros.py
libs/memotr/: train_mot17.yaml
libs/memotr/models/: backbone.py  criterion.py  matcher.py  (+6 more)
pose_tracking/: callbacks.py  config.py  losses.py  metrics.py  train.py  trainer.py  trainer_cvae.py  trainer_detr.py  trainer_kpt.py  trainer_memotr.py  trainer_others.py  trainer_rnd.py
pose_tracking/configs/: memotr_dextreme.yaml  memotr_multiobj.yaml
pose_tracking/dataset/: bcot.py  bop.py  bop_ds.py  bop_loaders.py  bop_meta.py  bop_scene_ds.py  custom.py  custom_sim_ds.py  dataloading.py  ds_common.py  ds_meta.py  ho3d.py  pizza_utils.py  tracking_ds.py  transforms.py  video_ds.py  ycbineoat.py  ycbv_ds.py
pose_tracking/eval/: eval_visuals.py
pose_tracking/models/: baselines.py  cnnlstm.py  cvae.py  detr.py  detr_kpt.py  detr_pretrained.py  detr_utils.py  direct_regr_cnn.py  encoders.py  matcher.py  pizza.py  pos_encoding.py  resnet.py  rnn_cells.py  set_criterion.py  unet.py
pose_tracking/utils/: args_parsing.py  artifact_utils.py  ba_utils.py  benchmark_utils.py  bop_subm.py  comet_utils.py  common.py  detr_utils.py  eval_utils.py  factor_utils.py  geom.py  io.py  kpt_utils.py  misc.py  pcl.py  pipe_utils.py  pose.py  pose_from_kpts.py  profiling_utils.py  quant_plots.py  render_utils.py  rotation_conversions.py  sam_utils.py  segm_utils.py  trimesh_utils.py  video_utils.py  vis.py  vis_3d.py
(+2 files in other folders)
