[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pose_tracking"
version = "0.0.1"
description = "6-DoF tracking of unseen objects in challenging visual environments"
authors = [
  { name = "Kirill Zaitsev" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["pose_tracking"]
force_sort_within_sections = true
